<resources>
    <string name="app_name">Le café mobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="separateur_morpion">¤</string>
    <string name="stats">Statistiques</string>
    <string name="wsmsg_maj">Last updated:</string>
    <string name="Yes">Oui</string>
    <string name="Ok">Ok</string>
    <string name="Continuerr">Continuez votre commande</string>
    <string name="Annulerr">annulez</string>
    <string name="No">Non</string>
    <string name="activation_GPS_requise">Vous devez activer votre GPS pour poursuivre. Voulez-vous le faire maintenant ?</string>
    <string name="Synchro">Synchro</string>
    <string name="ActualisationTournee">Actualisation tournée</string>
    <string name="Photo">Photo</string>
    <string name="photo_save">Photo sauvé</string>
    <string name="photo_not_save">Photo non sauvé</string>
    <string name="jpg_extension">.jpg</string>
    <string name="gallerie">Galerie</string>
    <string name="selectionnee">sélectionnée</string>
    <string name="gallery_contentdesc">Photo prise</string>
    <string name="aucune_image">Aucune image sélectionnée</string>
    <string name="delete_image_succes">L\'image a bien été supprimée!</string>
    <string name="delete_image_error">Une erreur s\'est produite lors de la suppression</string>
    <string name="error_rdv_serveur">Suppression de RDV serveur bloquée</string>
    <string name="Carto">Carto</string>
    <string name="Carto_maj">Mise à jour des Points d\'intérêts en cours</string>
    <string name="Synchro_maj">Mise à jour des données en cours</string>
    <string name="centrer">Centrer</string>
    <string name="demo">Démo</string>
    <string name="demo_on">Le mode "démo" est enclenché</string>
    <string name="demo_off">Le mode "démo" est arrêté</string>
    <string name="tournee_on">Le mode "tournée" est enclenché</string>
    <string name="tournee_off">Le mode "tournée" est arrêté</string>
    <string name="centrer_carte">Centrer dynamiquement la carte sur ma position</string>
    <string name="centrer_carte_not">Ne pas centrer la carte sur ma position</string>
    <string name="map_api_key">09WYiZfadJ7YB3woB2NQSpTacfJED5jEKWNFDKg</string>
    <string name="Geocode">Géocoder</string>
    <string name="Stock">Stock</string>
    <string name="Stock_et_commande">Historique</string>
    <string name="Effectuer_commande">Effectuer une facture</string>
    <string name="Naviguer">Naviguer</string>
    <string name="Appeler">Appeler</string>
    <string name="ficheclient">Fiche client</string>
    <string name="contact">Contacts</string>
    <string name="rapportactivite">Rapport d\'activité</string>
    <string name="rapportodo">Actions à réaliser</string>
    <string name="listemateriel">Matériel</string>
    <string name="listematerielclient">Matériel client</string>
    <string name="listepretmateriel">Liste prêt matériel</string>
    <string name="listemachine">Liste machine</string>
    <string name="relevelineaire">Relevé de linéaire</string>
    <string name="Intervention_save">Voulez-vous valider votre demande d\'intervention ?</string>
    <string name="POI">POI</string>
    <string name="Tournee">"      Tournée du "</string>
    <string name="menu_bilanjour">Bilan de la journée</string>
    <string name="Facture">Facture</string>
    <string name="BL">Bon de livraison</string>
    <string name="Avoir">Avoir</string>
    <string name="Retour">Retour marchandises</string>
    <string name="b_toggle_retour">Retour</string>
    <string name="b_toggle_avoir">Avoir</string>
    <string name="Simulation">Simulation</string>
    <string name="Client">Client</string>
    <string name="Prospect">Prospect</string>
    <string name="de">de</string>
    <string name="a">à</string>
    <string name="m">m</string>
    <string name="km">km</string>
    <string name="Lundi">Lundi</string>
    <string name="Mardi">Mardi</string>
    <string name="Mercredi">Mercredi</string>
    <string name="Jeudi">Jeudi</string>
    <string name="Vendredi">Vendredi</string>
    <string name="Samedi">Samedi</string>
    <string name="Dimanche">Dimanche</string>
    <string name="Heure">Heure</string>
    <string name="Date">Date</string>
    <string name="Fermeture">Fermeture</string>
    <string name="Vacances">Vacances</string>
    <string name="select_date_time_tournee">Veuillez sélectionner une date ainsi que l\'horaire pour votre tournée.</string>
    <string name="actuellement_ferme">actuellement fermé</string>
    <string name="ouvert_jusqua">ouvert jusqu\' à</string>
    <string name="list_clients_failed_geocode">Adresse des clients à mettre à jour</string>
    <string name="Stock_esime">Stock estimé</string>
    <string name="Stock_mini">Stock mini</string>
    <string name="A_proximite">À proximité</string>
    <string name="Ville">Ville</string>
    <string name="Tel">Tél</string>
    <string name="Consommation_par_semaine">Consommation par semaine</string>
    <string name="derniere_visite">Dernière visite le</string>
    <string name="stock_de">stock de</string>
    <string name="Consommation_depuis_derniere_visite">Consommation depuis dernière visite</string>
    <string name="mntht">Mnt HT :</string>
    <string name="date_selectionnee">Date sélectionnée</string>
    <string name="selectionner_date">Sélectionner une date</string>
    <string name="Valider">Valider</string>
    <string name="Annuler">Annuler</string>
    <string name="Selectionner_date_future">Il est nécessaire de sélectionner une date future</string>
    <string name="pas_de_resultat">Pas de résultat</string>
    <string name="interrogation_temps_reel">Interrogation en cours&#8230;</string>
    <string name="merci_patienter">Merci de patienter la fin de la récupération des clients</string>
    <string name="merci_patienter2">Merci de patienter jusqu\'à la fin de la tâche et effectuer votre demande de nouveau.</string>
    <string name="prevenir_par_email">Prévenir les clients</string>
    <string name="email_sujet">Visite prochaine</string>
    <string name="email_body">Bonjour,\n\nvotre stock de Redbull se réduit. Notre livreur viendra vous réapprovisionner le %s.\n\nBien cordialement</string>
    <string name="zoom_please">Merci de zoomer pour effectuer cette tâche</string>
    <string name="selection_zone">Sélectionner une zone</string>
    <string-array name="zone_array">
        <item>19990101</item>
    </string-array>
    <string name="CestOuvert">Open</string>
    <string name="CestFerme">Désactiver</string>
    <string name="Vu">Vu</string>
    <string name="rapport">Rapport</string>
    <string name="AVoir">à voir</string>
    <string name="menu_param">Paramètres</string>
    <string name="menu_plugins">Plugins</string>
    <string name="menu_go">Clients</string>
    <string name="menu_inventaire">Inventaire véhicule</string>
    <string name="menu_transfertStock">Echange de marchandise</string>
    <string name="menu_catalogue">Catalogue</string>
    <string name="menu_suivimarchandise">Suivi marchandise</string>
    <string name="menu_ech_entre_livreur">Transfert de stock</string>
    <string name="menu_commande_reappro">Commande de réapprovisionnement</string>
    <string name="commande_print">Imprimer</string>
    <string name="commande_printduplicata">Imprimer duplicata</string>
    <string name="commande_valider">Valider</string>
    <string name="commande_panier">Panier</string>
    <string name="commande_tout">Gamme habituelle</string>
    <string name="commande_annuler">Annuler</string>
    <string name="commande_quitter">Quitter</string>
    <string name="commande_transmettre">Transmettre</string>
    <string name="commande_pause">Pause</string>
    <string name="commande_askintervention">Demande d\'intervention</string>
    <string name="commande_askrapport">Demande de nouveau rapport</string>
    <string name="commande_suivant">Suivant</string>
    <string name="commande_aucunesaisie">Aucune quantité saisie</string>
    <string name="commande_fichecli">Fiche client</string>
    <string name="commande_print_msg">Attention vous ne pourrez plus modifier ou annuler ce document, imprimer ?</string>
    <string name="commande_valider_msg">Ce document sera immédiatement transmis au serveur</string>
    <string name="commande_annuler_msg">Effacer ce document définitivement ?</string>
    <string name="commande_facturable_saisie">Attention vous devez saisir un article</string>
    <string name="commande_cloture_rapport_tech">Voulez-vous clôturer le rapport ? </string>
    <string name="commande_impossibledelete">Vous ne pouvez plus annuler le document car vous l\'avez imprimé</string>
    <string name="commande_notPrinted">Vous devez imprimer le document d\'abord</string>
    <string name="commande_noLines">Le document est vide</string>
    <string name="commande_Historique">Historique</string>
    <string name="commande_Cadencier">Cadencier</string>
    <string name="commande_quest">Questions</string>
    <string name="commande_reglement">Réglement</string>
    <string name="encours_du_client_depasse">L\'encours dû par le client a été dépassé.</string>
    <string name="commande_duplicata">Voulez-vous imprimer le duplicata ?</string>
    <string name="commande_facturable">Attention votre intervention concerne une machine qui n\'est pas sous garantie. Souhaitez vous la facturer  ?</string>
    <string name="inventaire_encours">Impossible un inventaire est en cours et doit être transmis avant de pouvoir continuer</string>
    <string name="encours_client">Encours : </string>
    <string name="inventaire_connexion">Transmettre</string>
    <string name="inventaire_print">Aperçu impr.</string>
    <string name="inventaire_quit">Quitter</string>
    <string name="quitter">Quitter</string>
    <string name="inventaire_ended">Finir</string>
    <string name="inventaire_progressbar_title">Actualisation de l\'inventaire</string>
    <string name="inventaire_progressbar_message">Les lignes d\'inventaire non renseignées sont enregistrées avec une quantité à 0.</string>
    <string name="inventaire_resteainventorier">Reste à inventorier</string>
    <string name="inventaire_anomalies">Anomalies</string>
    <string name="transfertstock_encours">Impossible un réappro ou déchargement est en cours et doit être transmis avant de pouvoir continuer</string>
    <string name="transfertstock_connexion">Transmettre</string>
    <string name="transfertstock_print">Imprimer les anomalies</string>
    <string name="transfertstock_quit">Quitter</string>
    <string name="transfertstock_resteainventorier">Reste à inventorier</string>
    <string name="transfertstock_anomalies">Anomalies</string>
    <string name="menu_veuillezpatienter">Veuillez patienter&#8230;</string>
    <string name="menu_miseajour">Mise à jour en cours&#8230;</string>
    <string name="newversion_agendanem">Agenda nouvelle version disponible</string>
    <string name="total">Total : </string>
    <string name="total_selection">Total sélection :</string>
    <string name="solde">Solde</string>
    <string name="title_liste_encaissements">Encaissements</string>
    <string name="title_liste_factures">Factures</string>
    <string name="encaissement_regler">Régler</string>
    <string name="liste_facture_date">Date</string>
    <string name="liste_facture_type">Type</string>
    <string name="liste_facture_numero">Numéro</string>
    <string name="liste_facture_montantdu">Dû</string>
    <string name="code_agent">""Code agent : "</string>
    <string name="nomagent">"Nom : "</string>
    <string name="version">"Version : "</string>
    <string name="d_signation_">"Désignation : "</string>
    <string name="prochaine_relance">Prochaine relance le : </string>
    <string name="tarif_codetarif">Code tarif : </string>
    <string name="tarif_ferme">Fermé : </string>
</resources>