<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/llNameTarifOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5" >

        <TextView
            android:id="@+id/tvTitleName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/d_signation_"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvValueName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:paddingLeft="5dp"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSecondLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            android:id="@+id/llCodeTarif"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitleCOdeTarif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/tarif_codetarif"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvValueCodeTarif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFerme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitleFerme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/tarif_ferme"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvValueFerme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>