<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:id="@+id/llmain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/folliet" >
            </ImageView>

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="0.7"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code_agent" />

                    <TextView
                        android:id="@+id/textViewCodeAgent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nomagent" />

                    <TextView
                        android:id="@+id/textViewNomAgent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version" />

                    <TextView
                        android:id="@+id/textViewVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:cacheColorHint="#00000000" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llsynchro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
     
        android:layout_marginTop="25dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
   
         
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvsynchro"
                android:layout_width="0px"
                android:layout_weight="90"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:singleLine="false"
                android:text="@string/nomagent" />

            <ProgressBar
                android:id="@+id/pb1"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="0px"
                android:layout_weight="10"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>